<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Edit Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="click_me">Click Me!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_sub">AddSub</string>
    <string name="button_add">Add</string>
    <string name="button_sub">Subtract</string>

    <!-- STRINGS FOR CRAZY TIP CALC -->
    <string name="title_activity_crazy_tip_calc">CrazyTipCalc</string>
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>
    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">.15</string>
    <string name="final_bill_text_view">Final Bill</string>
    <string name="final_bill_edit_text">0.0</string>
    <string name="change_tip_text_view">Change Tip</string>
    <string name="intro_text_view">Introduction</string>
    <string name="intro_friendly_text_view">Friendly</string>
    <string name="intro_specials_text_view">Specials</string>
    <string name="intro_opinion_text_view">Opinion</string>
    <string name="available_text_view">Availability</string>
    <string name="available_bad_radiobutton">Bad</string>
    <string name="available_ok_radiobutton">OK</string>
    <string name="available_good_radiobutton">Good</string>
    <string name="time_waiting_text_view">Time Waiting for Service</string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>

    <!-- Spinner Options -->

    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>OK</item>
        <item>Good</item>
    </string-array>

    <string name="title_activity_countries">CountriesActivity</string>
    <string name="title_activity_serialize">SerializeActivity</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="title_activity_sqlview">SQLView</string>
    <string name="title_activity_http">HTTPActivity</string>

</resources>
