<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	 >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp"
        android:text="@string/hello_world" />
    
    <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
    
        <Button
    	    android:layout_weight="50"
        	android:id="@+id/button3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_add"
        	android:onClick="add" />
       
        <Button
    	    android:layout_weight="50"
        	android:id="@+id/button4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_sub"
        	android:onClick="subtract" />
        
    </LinearLayout>

</LinearLayout>
