<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	 >

    <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        
    	<EditText 
    	    android:layout_weight="50"
    	    android:id="@+id/edit_message"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/edit_message"
        	></EditText>
    
    	<Button
    	    android:layout_weight="50"
        	android:id="@+id/button2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/button_send"
        	android:onClick="sendMessage" />
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="45sp"
        android:layout_gravity="center" />


</LinearLayout>